<resources>
    <string name="app_name">MTSHomeWork</string>
    <string name="movie_details_image_description_film">Wrath of Man poster</string>
    <string name="movie_details_film_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="image_description_profile">Profile</string>
    <string name="image_description_line">Line</string>
    <string name="image_description_home">Home</string>
    <string name="movie_details_genre_action">боевики</string>
    <string name="movie_details_genre_drama">драмы</string>
    <string name="movie_details_genre_comedy">комедии</string>
    <string name="movie_details_genre_art_house">артхаус</string>
    <string name="movie_details_genre_melodramas">мелодрамы</string>
    <string name="movie_details_genre_documentaries">документальные</string>
    <string name="movie_details_date">22.04.2021</string>
    <string name="rating_18">18+</string>
    <string name="movie_details_name">Гнев человеческий</string>
    <string name="image_description_star">Star</string>
    <string name="image_description_empty_star">Empty Star</string>
    <string name="hartnett_name">Джош Харнетт</string>
    <string name="image_description_actor_hartnett">Actor Hartnett</string>
    <string name="mccallany_name">Холт Маккэллани</string>
    <string name="image_description_actor_mccallany">Actor McCallany</string>
    <string name="statham_name">Джейсон Стэйтем</string>
    <string name="image_description_actor_statham">Actor Statham</string>
    <string name="actors">Актеры</string>
    <string name="image_description_search">Search</string>
    <string name="popular_now">Популярное сейчас</string>
    <string name="image_description_film_poster">Film Poster</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_name">Константин</string>
    <string name="profile_email">konst.89@mail.com</string>
    <string name="image_description_avatar">avatar</string>
    <string name="interests">Интересы</string>
    <string name="personal_data">Личные данные</string>
    <string name="hint_name">Имя</string>
    <string name="hint_pass">Пароль</string>
    <string name="profile_pass">************</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Телефон</string>
    <string name="profile_settings">Настройки</string>
    <string name="profile_notifications">Уведомления и звуки</string>
    <string name="image_description_arrow">arrow</string>
    <string name="profile_confidentiality">Конфеденциальность</string>
    <string name="profile_theme">Тема</string>
    <string name="profile_language">Язык</string>
    <string name="profile_data">Данные и память</string>
    <string name="profile_application">Приложение</string>
    <string name="profile_question">Задать вопрос</string>
    <string name="profile_problem">Сообщить о проблеме</string>
    <string name="profile_logout">Выйти</string>
</resources>