<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivPoster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/movie_details_image_description_film"
        android:scaleType="centerCrop"
        android:src="@mipmap/statham"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/card_margin_top"
        app:cardBackgroundColor="@color/grey"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/movie_details_padding">


                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_indent"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textSize="@dimen/xx_big_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Гнев человеческий" />

                <ImageView
                    android:id="@+id/ivStarOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_indent"
                    android:layout_marginTop="@dimen/star_top_indent"
                    android:background="@drawable/ic_star_empty"
                    android:contentDescription="@string/image_description_star"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvName" />

                <ImageView
                    android:id="@+id/ivStarTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/star_side_indent"
                    android:layout_marginTop="@dimen/star_top_indent"
                    android:background="@drawable/ic_star_empty"
                    android:contentDescription="@string/image_description_star"
                    app:layout_constraintStart_toEndOf="@id/ivStarOne"
                    app:layout_constraintTop_toBottomOf="@id/tvName" />

                <ImageView
                    android:id="@+id/ivStarThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/star_side_indent"
                    android:layout_marginTop="@dimen/star_top_indent"
                    android:background="@drawable/ic_star_empty"
                    android:contentDescription="@string/image_description_star"
                    app:layout_constraintStart_toEndOf="@id/ivStarTwo"
                    app:layout_constraintTop_toBottomOf="@id/tvName" />

                <ImageView
                    android:id="@+id/ivStarFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/star_side_indent"
                    android:layout_marginTop="@dimen/star_top_indent"
                    android:background="@drawable/ic_star_empty"
                    android:contentDescription="@string/image_description_star"
                    app:layout_constraintStart_toEndOf="@id/ivStarThree"
                    app:layout_constraintTop_toBottomOf="@id/tvName" />

                <ImageView
                    android:id="@+id/ivStarFive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/star_side_indent"
                    android:layout_marginTop="@dimen/star_top_indent"
                    android:background="@drawable/ic_star_empty"
                    android:contentDescription="@string/image_description_empty_star"
                    app:layout_constraintStart_toEndOf="@id/ivStarFour"
                    app:layout_constraintTop_toBottomOf="@id/tvName" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_indent"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="@dimen/default_indent"
                    android:paddingEnd="@dimen/default_indent"
                    android:textColor="@color/black"
                    android:textSize="@dimen/big_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivStarOne"
                    tools:text="Это описание фильма текст текс текст ектс тек с етк ст текк" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>