<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivPoster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/statham"
        android:scaleType="centerCrop"
        android:contentDescription="@string/movie_details_image_description_film" />


    <com.google.android.material.card.MaterialCardView
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/card_margin_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="#F1F1F1"
        app:cardElevation="0dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="48dp">




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvRating"
                    android:background="@drawable/ic_circle_rating"
                    tools:text="18+"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/default_indent"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"
                    android:textSize="@dimen/big_text_size" />

                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_indent"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto"
                    tools:text="Гнев человеческий"
                    android:textColor="@color/black"
                    android:textSize="@dimen/xx_big_text_size"
                    android:textStyle="bold"
                     />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivStarOne"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvName"
                    android:layout_marginStart="@dimen/default_indent"
                    android:layout_marginTop="@dimen/star_top_indent"
                    android:background="@drawable/ic_star_empty"
                    android:contentDescription="@string/image_description_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivStarTwo"
                    app:layout_constraintStart_toEndOf="@id/ivStarOne"
                    app:layout_constraintTop_toBottomOf="@id/tvName"
                    android:layout_marginStart="@dimen/star_side_indent"
                    android:layout_marginTop="@dimen/star_top_indent"
                    android:background="@drawable/ic_star_empty"
                    android:contentDescription="@string/image_description_star" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivStarThree"
                    app:layout_constraintStart_toEndOf="@id/ivStarTwo"
                    app:layout_constraintTop_toBottomOf="@id/tvName"
                    android:layout_marginStart="@dimen/star_side_indent"
                    android:layout_marginTop="@dimen/star_top_indent"
                    android:background="@drawable/ic_star_empty"
                    android:contentDescription="@string/image_description_star" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivStarFour"
                    app:layout_constraintStart_toEndOf="@id/ivStarThree"
                    app:layout_constraintTop_toBottomOf="@id/tvName"
                    android:layout_marginStart="@dimen/star_side_indent"
                    android:layout_marginTop="@dimen/star_top_indent"
                    android:background="@drawable/ic_star_empty"
                    android:contentDescription="@string/image_description_star" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivStarFive"
                    app:layout_constraintStart_toEndOf="@id/ivStarFour"
                    app:layout_constraintTop_toBottomOf="@id/tvName"
                    android:layout_marginStart="@dimen/star_side_indent"
                    android:layout_marginTop="@dimen/star_top_indent"
                    android:background="@drawable/ic_star_empty"
                    android:contentDescription="@string/image_description_empty_star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDescription"
                    app:layout_constraintTop_toBottomOf="@id/ivStarOne"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/default_indent"
                    android:paddingStart="@dimen/default_indent"
                    android:paddingEnd="@dimen/default_indent"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textSize="@dimen/big_text_size"
                    tools:text="Это описание фильма текст текс текст ектс тек с етк ст текк"/>





            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>